# dx-sdk-rs-5.0

./: CHANGELOG.md  README.md  zip-example-wasm.sh
contracts/examples/crowdfunding-esdt/: Cargo.toml
contracts/examples/digital-cash/: README.md
contracts/examples/esdt-transfer-with-fee/: Cargo.toml
contracts/examples/lottery-esdt/: Cargo.toml  documentation.md
contracts/examples/multisig/: README.md
contracts/examples/nft-minter/: readme.md
contracts/feature-tests/abi-tester/: abi_tester_expected_main.abi.json  abi_tester_expected_view.abi.json
contracts/feature-tests/alloc-features/: Cargo.toml
contracts/feature-tests/basic-features/: Cargo.toml
contracts/feature-tests/big-float-features/: Cargo.toml
contracts/feature-tests/esdt-system-sc-mock/: Cargo.toml
contracts/feature-tests/esdt-system-sc-mock/meta/: Cargo.toml
contracts/feature-tests/esdt-system-sc-mock/meta/src/: main.rs
contracts/feature-tests/esdt-system-sc-mock/src/: esdt_system_sc_mock.rs
contracts/feature-tests/esdt-system-sc-mock/tests/: esdt_system_sc_mock_scenario_go_test.rs  esdt_system_sc_mock_scenario_rs_test.rs
contracts/feature-tests/esdt-system-sc-mock/wasm/: Cargo.toml
contracts/feature-tests/esdt-system-sc-mock/wasm/src/: lib.rs
contracts/feature-tests/managed-map-features/: Cargo.toml
contracts/feature-tests/use-module/: use_module_expected_main.abi.json  use_module_expected_view.abi.json
contracts/modules/src/: esdt.rs  (+3 more)
framework/base/: Cargo.toml
framework/scenario/: Cargo.toml
framework/snippets/: README.md
sdk/core/: README.md
vm/: Cargo.toml
(+211 files in other folders)
