[package]
name = "esdt-system-sc-mock"
version = "0.0.0"
authors = ["Dorin Marian Iancu <dorin.iancu@dharitri.com>"]
edition = "2021"
publish = false

[lib]
path = "src/esdt_system_sc_mock.rs"

[dependencies.dharitri-sc]
version = "0.43.4"
path = "../../../framework/base"

[dev-dependencies.dharitri-sc-scenario]
version = "0.43.4"
path = "../../../framework/scenario"
